--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Spa Universe</title>
     <link rel="stylesheet" href="./src/styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <script src="./main.js" type="module" defer></script>
+    <script src="./src/scripts/main.js" type="module" defer></script>
 </head>
 <body>
     <nav>
@@ -17,19 +17,19 @@
                 <img src="./src/images/universe.svg" alt="Icone de universo">
             </li>
             <li>
-                <a href="/">Home</a>
+                <a href="/" onclick="route()">Home</a>
             </li>
             <li>
-                <a href="/universe">O Universo</a>
+                <a href="/universe" onclick="route()">O Universo</a>
             </li>
             <li>
-                <a href="/exploration">Exploração</a>
+                <a href="/exploration" onclick="route()">Exploração</a>
             </li>
         </ul>
     </nav>
 
     <main>
-        <div id="app"></div>
+            <div id="app"></div>
     </main>
 </body>
 </html>
