--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,2 +1,4 @@
-<h1>Explore o universo</h1>
-<button>Quero saber mais</button>
+<div class="home-container">
+    <h1>Explore o universo</h1>
+    <button id="more-info">Quero saber mais</button>
+</div>
